--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,9 +18,14 @@ pool:
     sonarQubeRunAnalysis: false
     spotBugsAnalysis: false
 
+
 - task: SonarCloudPrepare@1
   inputs:
+    SonarCloud: 'rcarozu-sonar'
+    organization: 'rcarozu-devsecops'
     scannerMode: 'MSBuild'
+    projectKey: 'rcarozu-devsecops'
+    projectName: 'rcarozu-DevSecOps'
 
 - task: Gradle@3
   inputs:
@@ -34,4 +39,6 @@ pool:
 
 - task: sonarcloud-buildbreaker@2
   inputs:
+    SonarCloud: 'rcarozu-sonar'
+    organization: 'rcarozu-devsecops'
 
