--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,15 @@
 pool:
   vmImage: ubuntu-latest
 
+- task: Gradle@3
+  inputs:
+    gradleWrapperFile: 'gradlew'
+    tasks: 'build'
+    publishJUnitResults: true
+    testResultsFiles: '**/TEST-*.xml'
+    javaHomeOption: 'JDKVersion'
+    sonarQubeRunAnalysis: false
+    spotBugsAnalysis: false
 
 - task: SonarCloudPrepare@1
   inputs:
