Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,3 +42,19 @@ steps:
     scanPath: '${Build.SourcesDirectory}/build/libs'
     format: 'HTML'
 
+- task: DockerInstaller@0
+  inputs:
+    dockerVersion: '17.09.0-ce'
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'Docker'
+    command: 'login'
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'Docker'
+    command: 'build'
+    Dockerfile: '**/Dockerfile'
+
+
