--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,16 @@ steps:
     organization: 'rcarozu-devsecops'
     projectKey: 'rcarozu-DevSecOps_pet-clinic'
     projectName: 'pet-clinic'
+    
+steps:
+- task: Maven@3
+  inputs:
+    mavenPomFile: 'pom.xml'
+    publishJUnitResults: false
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.11'
+    mavenVersionOption: 'Default'
+    mavenOptions: '-Xmx3072m'    
 
 - task: Gradle@3
   inputs:
