Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'Docker'
-    repository: 'rcarozu-devsecops/pet-clinic'
+    repository: 'rcarozu/pet-clinic'
     command: 'build'
     Dockerfile: '**/Dockerfile'
     tags: 'latest'
@@ -61,13 +61,13 @@ steps:
     sudo apt-get install -y rpm
     wget https://github.com/aquasecurity/trivy/releases/download/v0.27.1/trivy_0.27.1_Linux-64bit.deb
     sudo dpkg -i trivy_0.27.1_Linux-64bit.deb
-    trivy image rcarozu-devsecops/pet-clinic:latest
+    trivy image rcarozu/pet-clinic:latest
   displayName: Image Scan
 
 - task: Docker@2
   inputs:
     containerRegistry: 'Docker'
-    repository: 'rcarozu-devsecops/pet-clinic'
+    repository: 'rcarozu/pet-clinic'
     command: 'push'
     tags: 'latest'
 
